Source/WebCore: <meter> element not exposed to accessibility https://bugs.webkit.org/show_bug.cgi?id=109023 rdar://problem/13658964

Reviewed by Tim Horton.

Makes the <meter> element appear in the AX tree by reusing the
AccessibilityProgressIndicator element to handle either progress or meter
elements.

Test: accessibility/meter-element.html

* accessibility/AXObjectCache.cpp:
(WebCore::createFromRenderer):
(WebCore::AXObjectCache::getOrCreate):
* accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::canHaveChildren):
(WebCore::AccessibilityNodeObject::visibleText):
* accessibility/AccessibilityProgressIndicator.cpp:
(WebCore::AccessibilityProgressIndicator::AccessibilityProgressIndicator):
(WebCore::AccessibilityProgressIndicator::create):
(WebCore::AccessibilityProgressIndicator::valueForRange):
(WebCore::AccessibilityProgressIndicator::maxValueForRange):
(WebCore::AccessibilityProgressIndicator::minValueForRange):
(WebCore::AccessibilityProgressIndicator::progressElement):
(WebCore::AccessibilityProgressIndicator::meterElement):
* accessibility/AccessibilityProgressIndicator.h:
(AccessibilityProgressIndicator):
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::firstChild):
(WebCore::AccessibilityRenderObject::lastChild):
    These methods are modified to handle when there is no rendered children, but there are Node
    children. The node children are desired when calculating text within a node, for example.

LayoutTests: <meter> element not exposed to accessibility
https://bugs.webkit.org/show_bug.cgi?id=109023

Reviewed by Tim Horton.

* accessibility/meter-element-expected.txt: Added.
* accessibility/meter-element.html: Added.
* platform/mac/accessibility/role-subrole-roledescription-expected.txt:
* platform/mac/accessibility/role-subrole-roledescription.html:



Canonical link: https://commits.webkit.org/133652@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149155 268f45cc-cd09-0410-ab3c-d52691b4dbfc