Source/WebCore/accessibility/AccessibilityProgressIndicator.h
@@ -21,17 +21,29 @@
 #ifndef AccessibilityProgressIndicator_h
 #define AccessibilityProgressIndicator_h
 
-#if ENABLE(PROGRESS_ELEMENT)
+#if ENABLE(PROGRESS_ELEMENT) || ENABLE(METER_ELEMENT)
 #include "AccessibilityRenderObject.h"
 
 namespace WebCore {
 
+#if ENABLE(METER_ELEMENT)
+class HTMLMeterElement;
+class RenderMeter;
+#endif
+
+#if ENABLE(PROGRESS_ELEMENT)
 class HTMLProgressElement;
 class RenderProgress;
-
+#endif
+    
 class AccessibilityProgressIndicator : public AccessibilityRenderObject {
 public:
+#if ENABLE(PROGRESS_ELEMENT)
     static PassRefPtr<AccessibilityProgressIndicator> create(RenderProgress*);
+#endif
+#if ENABLE(METER_ELEMENT)
+    static PassRefPtr<AccessibilityProgressIndicator> create(RenderMeter*);
+#endif
 
 private:
     virtual AccessibilityRole roleValue() const { return ProgressIndicatorRole; }
@@ -42,15 +54,21 @@ private:
     virtual float maxValueForRange() const;
     virtual float minValueForRange() const;
 
+#if ENABLE(PROGRESS_ELEMENT)
     explicit AccessibilityProgressIndicator(RenderProgress*);
-
-    HTMLProgressElement* element() const;
+    HTMLProgressElement* progressElement() const;
+#endif
+#if ENABLE(METER_ELEMENT)
+    explicit AccessibilityProgressIndicator(RenderMeter*);
+    HTMLMeterElement* meterElement() const;
+#endif
+    
     virtual bool computeAccessibilityIsIgnored() const;
 };
 
 
 } // namespace WebCore
 
-#endif // ENABLE(PROGRESS_ELEMENT)
+#endif // ENABLE(PROGRESS_ELEMENT) || ENABLE(METER_ELEMENT)
 
 #endif // AccessibilityProgressIndicator_h
